--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Construct - Бизнес-ланчи в Москве</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                 <p>Быстрая доставка вкусных блюд прямо к вашему офису или дому в Москве</p>
                 <a href="pack_a_lunch.html" class="cta-button">Собрать ланч</a>
             </div>
-            <img src="assets/images/hero_image.jpg" alt="Delicious lunch delivery" class="hero-image">
+            <img src="hero_image.jpg" alt="Delicious lunch delivery" class="hero-image">
         </section>
 
         <section id="about_us" class="about">
