--- a/pack_a_lunch.html
+++ b/pack_a_lunch.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pack a lunch</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/pack_a_lunch.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="pack_a_lunch.css">
 </head>
 
 <body>
@@ -44,77 +44,77 @@
             <div class="lunch-grid">
                 <div class="lunch-options">
                     <div>
-                        <img src="assets/images/icons/soup.png" alt="суп">
+                        <img src="soup.png" alt="суп">
                         <p>суп</p>
                     </div>
                     <div>
-                        <img src="assets/images/icons/main.png" alt="главное блюдо">
+                        <img src="main.png" alt="главное блюдо">
                         <p>главное блюдо</p>
                     </div>
                     <div>
-                        <img src="assets/images/icons/salad.png" alt="салат">
+                        <img src="salad.png" alt="салат">
                         <p>салат</p>
                     </div>
                     <div>
-                        <img src="assets/images/icons/drink.png" alt="напиток">
+                        <img src="drink.png" alt="напиток">
                         <p>напиток</p>
                     </div>
                 </div>
                 <div class="lunch-options">
                     <div>
-                        <img src="assets/images/icons/soup.png" alt="суп">
+                        <img src="soup.png" alt="суп">
                         <p>суп</p>
                     </div>
                     <div>
-                        <img src="assets/images/icons/main.png" alt="главное блюдо">
+                        <img src="main.png" alt="главное блюдо">
                         <p>главное блюдо</p>
                     </div>
                     <div>
-                        <img src="assets/images/icons/drink.png" alt="напиток">
+                        <img src="drink.png" alt="напиток">
                         <p>напиток</p>
                     </div>
                 </div>
                 <div class="lunch-options">
                     <div>
-                        <img src="assets/images/icons/soup.png" alt="суп">
+                        <img src="soup.png" alt="суп">
                         <p>суп</p>
                     </div>
                     <div>
-                        <img src="assets/images/icons/salad.png" alt="салат">
+                        <img src="salad.png" alt="салат">
                         <p>салат</p>
                     </div>
                     <div>
-                        <img src="assets/images/icons/drink.png" alt="напиток">
+                        <img src="drink.png" alt="напиток">
                         <p>напиток</p>
                     </div>
                 </div>
                 <div class="lunch-options">
                     <div>
-                        <img src="assets/images/icons/main.png" alt="главное блюдо">
+                        <img src="main.png" alt="главное блюдо">
                         <p>главное блюдо</p>
                     </div>
                     <div>
-                        <img src="assets/images/icons/salad.png" alt="салат">
+                        <img src="salad.png" alt="салат">
                         <p>салат</p>
                     </div>
                     <div>
-                        <img src="assets/images/icons/drink.png" alt="напиток">
+                        <img src="drink.png" alt="напиток">
                         <p>напиток</p>
                     </div>
                 </div>
                 <div class="lunch-options">
                     <div>
-                        <img src="assets/images/icons/main.png" alt="главное блюдо">
+                        <img src="main.png" alt="главное блюдо">
                         <p>главное блюдо</p>
                     </div>
                     <div>
-                        <img src="assets/images/icons/drink.png" alt="напиток">
+                        <img src="drink.png" alt="напиток">
                         <p>напиток</p>
                     </div>
                 </div>
                 <div class="lunch-options">
                     <div>
-                        <img src="assets/images/icons/desert.png" alt="десерт">
+                        <img src="desert.png" alt="десерт">
                         <p>десерт</p>
                         <i class="dessert-info">(можно добавить к любому заказу)</i>
                     </div>
@@ -247,8 +247,8 @@
         </div>
     </footer>
 
-    <script src="assets/js/meals.js"></script>
-    <script src="assets/js/pack_a_lunch.js"></script>
+    <script src="meals.js"></script>
+    <script src="pack_a_lunch.js"></script>
 </body>
 
 </html>
